2001-02-22  Bruno Haible  <haible@clisp.cons.org>

	* INTEGRATE (Makefile.am): Change $@-t to t-$@. For DJGPP.
	Patch by Juan Manuel Guerrero <st001906@hrz1.hrz.tu-darmstadt.de>.

2001-02-20  Bruno Haible  <haible@clisp.cons.org>

	Better support for DOS/Windows platforms.
	* autoconf/ltconfig: Upgrade to libtool-1.3.5.
	* autoconf/ltmain.sh: Likewise.
	* m4/libtool.m4: Likewise.
	* autoconf/aclocal.m4: Likewise.
	* configure.in: Call AC_OBJEXT and AC_EXEEXT.

2001-02-20  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (libdir, includedir, mandir): Use the autoconf
	determined value, in order to respect the configure arguments.
	* lib/Makefile.in (libdir): Likewise.

2000-12-13  Bruno Haible  <haible@clisp.cons.org>

	* autoconf/install-sh: Update to a newer version from fileutils.

2000-12-12  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in: Use $(MAKE) instead of $(MAKE) -r. Needed with Solaris
	"make", which doesn't set MAKE as expected by @SET_MAKE@ if -r is
	given. Reported by Toshimitsu Fujiwara.

2000-12-08  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (exec_prefix): Use configure's --exec-prefix argument.

2000-12-02  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.msvc (check): Depend on target 'force' as well.
	(mostlyclean, clean, distclean, maintainer-clean): Fix dependency.

	* Makefile.msvc: Replace STATIC with its opposite flag, DLL.

2000-11-24  Bruno Haible  <haible@clisp.cons.org>

	* tools/all-charsets: Update for 2000-10-31 change of
	lib/config.charset.

2000-11-23  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (install-lib): Fix for builddir != srcdir.

2000-11-22  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (all): Fix for builddir != srcdir.

2000-11-21  Bruno Haible  <haible@clisp.cons.org>

	* include/libcharset.h.in: Renamed from include/libcharset.h.
	* windows/dllexport.h: New file.
	* Makefile.devel (all): Add config.h.msvc,
	include/libcharset.h.msvc-shared.